# autovideo

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
autovideo/: cli.py  config.py
autovideo/core/: image_generator.py  models.py  pipeline.py  script_generator.py  tts_engine.py  video_composer.py
autovideo/ui/: app.py
